<resources>
    <string name="app_name">DownloadFile</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="please_choose_a_download_package">Please choose a download package</string>

    <string name="change_name">Udacity</string>
    <string name="change_description">Android Kotlin Nanodegree</string>

    <string name="glide_desc">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_desc">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_desc">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="loading_completed">Downloaded Completed</string>
    <string name="see_result">Check the status</string>
    <string name="you_should_select_from_list">You should select from list</string>
    <string name="failed_status">Failed</string>
    <string name="success_status">Success</string>
    <string name="we_are_loading">We are loading</string>
    <string name="download">Download</string>
    <string name="ok">OK</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>

    <string name="glide">Glide</string>
    <string name="load_app">LoadApp</string>
    <string name="retrofit">Retrofit</string>
    <string name="download_image">Image download icon</string>
    <string name="make_download">Make download</string>
    <string name="message_permission_granted">Permission for notification already granted.</string>
    <string name="message_permission_denied">Permissão de notificação não concedida.</string>
</resources>
